--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alfred-losenfras",
-  "version": "1.0.0",
-  "description": "Skapa lösenfraser med Alfred",
+  "version": "1.0.1",
+  "description": "Create Swedish pass phrases (lösenfras) with Alfred",
   "license": "MIT",
   "repository": "staryd/alfred-losenfras",
   "author": {
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "alfy-test": "^0.3.0",
-    "ava": "^0.18.0",
-    "xo": "^0.17.0"
+    "ava": "^0.24.0",
+    "xo": "^0.18.2"
   }
 }
